# that-game-engine

./: .gitignore  README.md  gen-ios-xcode.sh
doc/: TDD.md
src/app/ios/: CMakeLists.txt  GameLogicLoader.cpp  GameLogicLoader.hpp  NativeInterface.h  NativeInterface.mm  ViewController.m
src/game/: CMakeLists.txt  Game.cpp  Game.hpp
src/pipeline/AssetServer/: CMakeLists.txt  FileSystemWatcher.cpp  FileSystemWatcher.hpp  main.cpp
